--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,8 +6,9 @@ html(lang='en-gb')
             title #{title} | #{app.settings.title}
         else
             title #{app.settings.title}
-        link(rel='stylesheet' href='/stylesheets/style.css' type='text/css')
-        link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous')
+        if useBootstrap
+            link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous')
+        link(rel='stylesheet' href='https://www.besterintranet.' + tld + '/stylesheets/style.css' type='text/css')
         meta(charset='UTF-8')
         meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
         meta(name='mobile-web-app-capable' content='yes')
@@ -28,10 +29,15 @@ html(lang='en-gb')
         meta(name='msapplication-tooltip' content='Bester Intranet')
         meta(name='msapplication-window' content='width=1024;height=768')
         meta(name='msapplication-starturl' content='/')
-        script(src='/scripts/main.js' async)
+        script(src='https://www.besterintranet.' + tld + '/scripts/main.js' async)
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
         script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js' integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1' crossorigin='anonymous')
-        script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js' integrity='sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM' crossorigin='anonymous')
+        if useBootstrap
+            script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js' integrity='sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM' crossorigin='anonymous')
+        if scripts
+            each script in scripts
+                script(src= script)
+
     body
         .container
             block content
