--- a/views/login.pug
+++ b/views/login.pug
@@ -10,6 +10,7 @@ block content
                         img(src="https://static.besterintranet.com/assets/images/logo.png" srcset="https://static.besterintranet.com/assets/images/logo96x96.png 2x" height="48" width="48")
                     td
                         h1 Bester Intranet
+        .clear
         .container--center.basic-header-body-container
             h1= message
             .login-form-container
