--- a/views/myaccount-my-info.pug
+++ b/views/myaccount-my-info.pug
@@ -2,4 +2,16 @@
 extends myaccount
 
 block myaccount-content
-    p My Information
+    .myaccount-stack-view
+        a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="/myaccount/my-info/name/")
+            span Name
+            span.myaccount-stack-view__box-value #{user.first_name} #{user.last_name}
+            img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
+        a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="/myaccount/my-info/username/")
+            span Username
+            span.myaccount-stack-view__box-value #{user.username}
+            img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
+        a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="/myaccount/my-info/dob/")
+            span Date of Birth
+            span.myaccount-stack-view__box-value
+            img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
