--- a/views/error.pug
+++ b/views/error.pug
@@ -2,8 +2,17 @@
 extends layout
 
 block content
-    h1 #{error.status}
-    if env.NODE_ENV == 'development'
-        p #{error.stack}
-    else
-        p #{error.message}
+    .basic-container
+        #basic-header
+            table
+                tr
+                    td
+                        img(src="https://static.besterintranet.com/assets/images/logo.png" srcset="https://static.besterintranet.com/assets/images/logo96x96.png 2x" height="48" width="48")
+                    td
+                        h1 Bester Intranet
+        .container--center.basic-header-body-container
+            h1 #{error.status}
+            if env.NODE_ENV == 'development'
+                p #{error.stack}
+            else
+                p #{error.message}
