--- a/views/myaccount-data.pug
+++ b/views/myaccount-data.pug
@@ -2,4 +2,10 @@
 extends myaccount
 
 block myaccount-content
-    p Data
+    .myaccount-stack-view
+        a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="/myaccount/data/usage/")
+            span Storage used
+            span.myaccount-stack-view__box-value 2.4GB of 10GB
+            img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
+            .myaccount-stack-view__box-container#myaccount-data-usage-bar
+                .myaccount-data-usage-bar__used(style='width: 24%;')
