--- a/views/myaccount-home.pug
+++ b/views/myaccount-home.pug
@@ -4,7 +4,23 @@ extends myaccount
 block myaccount-content
     h3 Recommendations (2)
     .myaccount-stack-view
-        a.myaccount-stack-view__box(href="")
-            span Enable Two-factor Authentication
-        a.myaccount-stack-view__box(href="")
+        a.myaccount-stack-view__box(href="/myaccount/security/twofa/")
+            span Enable 2 Factor Authentication
+            img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
+        a.myaccount-stack-view__box(href="/myaccount/security/password/")
             span Set a secure password
+            img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
+    h3 Links
+    .myaccount-stack-view
+        a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="/myaccount/my-info/")
+            span My Information
+            img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
+        a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="/myaccount/security/")
+            span Security
+            img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
+        a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="/myaccount/services/")
+            span Services
+            img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
+        a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="/myaccount/data/")
+            span Data
+            img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
