--- a/views/myaccount-security.pug
+++ b/views/myaccount-security.pug
@@ -11,6 +11,6 @@ block myaccount-content
             img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
     h3 Tasks
     .myaccount-stack-view
-        a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="/myaccount/security/")
+        a.myaccount-stack-view__box.myaccount-stack-view__box--related(href="/myaccount/security/logout-everywhere/")
             span Logout of all devices
             img.myaccount-stack-view__box-image(src="https://static.besterintranet.com/assets/images/rightarrow16x16.png" srcset="https://static.besterintranet.com/assets/images/rightarrow32x32.png 2x")
