--- a/views/admin-home.pug
+++ b/views/admin-home.pug
@@ -32,6 +32,8 @@ block content
                         li.navigation-bar--center__item
                             a.navigation-bar--center__link(class=(activeItem === "users" ? "navigation-bar--center__link--active" : undefined) href='/admin/users/') Users
                         li.navigation-bar--center__item
+                            a.navigation-bar--center__link(class=(activeItem === "privilege-templates" ? "navigation-bar--center__link--active" : undefined) href='/admin/privilege-templates/') Privilege Templates
+                        li.navigation-bar--center__item
                             a.navigation-bar--center__link(class=(activeItem === "access-tokens" ? "navigation-bar--center__link--active" : undefined) href='/admin/access-tokens/') Access Tokens
                         li.navigation-bar--center__item
                             a.navigation-bar--center__link(class=(activeItem === "nonces" ? "navigation-bar--center__link--active" : undefined) href='/admin/nonces/') Nonces
